--- a/src/styles/Sidebar.css
+++ b/src/styles/Sidebar.css
@@ -10,6 +10,7 @@
   transition: width 0.3s ease;
   overflow: hidden;
   z-index: 999; /* Ensure it's above the content */
+  
 }
 
 .sidebar.collapsed {
@@ -32,12 +33,11 @@
 
 ul {
   list-style: none;
-  padding: 0;
+  padding: 20px 20px;
+  /* margin: 20px 20px; */
+ 
 }
 
-/* ul li {
-  padding: 0px 20px;
-} */
 
 ul li a {
   color: white;
